<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.funthomas424242</groupId>
    <artifactId>jar-install-plugin</artifactId>
    <packaging>maven-plugin</packaging>
    <version>0.0.5-SNAPSHOT</version>
    <name>JAR Install Plugin</name>
    <inceptionYear>2010</inceptionYear>

    <url>https://github.com/FunThomas424242/jar-install-plugin/</url>

    <description>
        Maven plugin to download jar files and install them as artifact into
        the local maven repository. Additional the artifacts will be added to
        the dependency list of maven project.
    </description>


    <prerequisites>
        <maven>${mavenVersion}</maven>
    </prerequisites>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <mavenVersion>3.6.3</mavenVersion>
        <java.version>11</java.version>
        <maven.compiler.release>11</maven.compiler.release>
        <junit-jupiter-engine.version>5.5.2</junit-jupiter-engine.version>
        <junit-excluded-groups/>
    </properties>

    <profiles>
        <profile>
            <id>local</id>
            <build>
                <plugins>

                </plugins>
            </build>
        </profile>

    </profiles>

    <scm>
        <url>https://github.com/FunThomas424242/jar-install-plugin</url>
        <connection>scm:git:https://github.com/FunThomas424242/jar-install-plugin.git</connection>
        <developerConnection>scm:git:https://github.com/FunThomas424242/jar-install-plugin.git</developerConnection>
    </scm>

    <ciManagement>
        <system>Travis</system>
        <url>https://travis-ci.org/FunThomas424242/jar-install-plugin</url>
    </ciManagement>

    <issueManagement>
        <system>Issue</system>
        <url>https://github.com/FunThomas424242/jar-install-plugin/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub FunThomas424242 Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/FunThomas424242/${project.artifactId}</url>
        </repository>
    </distributionManagement>

    <licenses>
        <license>
            <url>https://www.gnu.org/licenses/lgpl-3.0.de.html</url>
            <name>GNU LESSER GENERAL PUBLIC LICENSE
                Version 3, 29 June 2007
            </name>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>${mavenVersion}</version>
        </dependency>
        <!-- dependencies to annotations -->
        <dependency>
            <groupId>org.apache.maven.plugin-tools</groupId>
            <artifactId>maven-plugin-annotations</artifactId>
            <version>3.6.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-project</artifactId>
            <version>3.0-alpha-2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-artifact</artifactId>
            <version>${mavenVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-shared-utils</artifactId>
            <version>3.2.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.maven.plugin-testing</groupId>
            <artifactId>maven-plugin-testing-harness</artifactId>
            <version>3.3.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter-engine.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.2.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.2</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>13</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <rulesUri>file:///${project.basedir}/etc/version-rules.xml</rulesUri>
                </configuration>
                <executions>
                    <execution>
                        <id>show-dep-updates</id>
                        <phase>
                            validate
                        </phase>
                        <goals>
                            <goal>display-dependency-updates</goal>
                            <goal>display-plugin-updates</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <release>11</release>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <!--          <forkCount>0</forkCount>-->
                    <!--          <reuseForks>true</reuseForks>-->
                    <argLine>
                        --illegal-access=deny
                    </argLine>
                    <excludedGroups>
                        ${junit-excluded-groups}
                    </excludedGroups>
                    <excludes>
                        <exclude>**/TestMain.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <!-- NOTE: We don't need a groupId specification because the group is
                    org.apache.maven.plugins ...which is assumed by default. -->
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>package-assemblies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <tarLongFileMode>gnu</tarLongFileMode>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <attach>true</attach>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <attach>true</attach>
                    <additionalJOption>-Xdoclint:none</additionalJOption>
                    <tags>
                        <tag>
                            <name>goal</name>
                            <placement>a</placement>
                            <head>Goal:</head>
                        </tag>
                        <tag>
                            <name>phase</name>
                            <placement>a</placement>
                            <head>Phase:</head>
                        </tag>
                        <tag>
                            <name>threadSafe</name>
                            <placement>a</placement>
                            <head>Thread Safe:</head>
                        </tag>
                        <tag>
                            <name>requiresDependencyResolution</name>
                            <placement>a</placement>
                            <head>Requires Dependency Resolution:</head>
                        </tag>
                        <tag>
                            <name>requiresProject</name>
                            <placement>a</placement>
                            <head>Requires Project:</head>
                        </tag>
                    </tags>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>2.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.5</version>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>


    <developers>
        <developer>
            <id>funthomas424242</id>
            <name>Thomas Schubert</name>
            <email>funthomas424242@googlemail.com</email>
            <timezone>+1</timezone>
            <organization>The world wide open source community</organization>
            <roles>
                <role>owner</role>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

</project>
